# Reversi

./: AIPlayer.cpp  AIPlayer.h  AiTest.cpp  Board.cpp  Board.h  BoardTest.cpp  CMakeLists.txt  Cell.cpp  Cell.h  CellManger.cpp  CellManger.h  CellMangerTest.cpp  CellTest.cpp  Client.cpp  Client.h  ClientPlayer.cpp  ClientPlayer.h  Command.h  CommandManeger.cpp  CommandManeger.h  GameFlow.cpp  GameFlow.h  GameMap.cpp  GameMap.h  GameRoom.cpp  GameRoom.h  GameShower.h  Gtest_main.cpp  HumanPlayer.cpp  HumanPlayer.h  HumanTest.cpp  JoinGame.cpp  JoinGame.h  ListGames.cpp  ListGames.h  PlayGame.cpp  PlayGame.h  Player.h  Point.cpp  Point.h  (+13 more)
Tests/: CellManagerTest.cpp  CellTest.cpp  ReverseRuleTest.cpp  mainTest.cpp
